@startuml Banner2

class Main {
}

abstract class Print {
    {abstract} printWeak()
    {abstract} printStrong()
}

class PrintBanner {
    banner
    printWeak()
    printStrong()
}

class Banner {
    showWithParen()
    showWithAster()
}

Main --> Print : Uses >
PrintBanner -left-|> Print
PrintBanner o-right-> Banner

@enduml
